--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,9 +1,11 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    /*font-family: 'Roboto', sans-serif;*/
     box-sizing: border-box;
     line-height: 1.2;
+
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 *, *:before, *:after {
